Fix spacing for complexes with no description

--- a/src/app/complex/complex-results/complex-list/complex-list.component.css
+++ b/src/app/complex/complex-results/complex-list/complex-list.component.css
@@ -5,11 +5,12 @@
 
 .container {
   display: inline-flex;
+  width: -webkit-fill-available;
 }
 
 .complexesAndDescription {
   padding: 10px;
-  width: 95%
+  width: 95%;
 }
 
 .basketButtonContainer {
@@ -25,5 +26,5 @@
 .predictedOrCuratedLabel {
   background-color: var(--primary);
   color: var(--on-primary);
-  padding: 4px 8px;;
+  padding: 4px 8px;
 }
